disabled most pages to decrease build time. Moved search to the left
fixed mobile views.
Search isn't done on mobile.
full page search still needs doing

--- a/mkdocs_zen/js/mkdocs/search-results-template.mustache
+++ b/mkdocs_zen/js/mkdocs/search-results-template.mustache
@@ -1,7 +1,7 @@
-<a href="{{location}}" class="bg-white block w-full hover:bg-gray-300 ">
-    <div class="px-2 py-1">
-        <h4 class="my-0 text-blue-500">{{title}}
+<a href="{{location}}" class="block hover:bg-gray-400">
+    <div class="py-1 pl-2">
+        <h4 class="my-0 text-blue-500 text-base">{{title}}
         </h4>
-        <p class="my-0 text-xs truncate">{{summary}}</p>
+        <p class="my-0 text-xs truncate ">{{summary}}</p>
     </div>
 </a>
